# rating-graph-processor

./: Cargo.toml  README.md  config.toml  run.sh
src/: command.rs  config.rs  main.rs  processing.rs
